--- a/custom_components/melitta_coffee/translations/nl.json
+++ b/custom_components/melitta_coffee/translations/nl.json
@@ -10,8 +10,8 @@
         }
       },
       "scan": {
-        "title": "Melitta scannen",
-        "description": "Selecteer je Melitta koffiezetapparaat uit de gevonden apparaten.",
+        "title": "Bluetooth apparaten gevonden",
+        "description": "Selecteer je Melitta koffiezetapparaat uit de lijst. Apparaten met een * ervoor zijn waarschijnlijk Melitta-apparaten.",
         "data": {
           "mac_address": "Gevonden apparaat",
           "device_name": "Naam apparaat",
@@ -31,13 +31,13 @@
         "title": "Melitta gevonden",
         "description": "Melitta apparaat gevonden: {name} ({address}). Wil je dit apparaat toevoegen?",
         "data": {
-          "name": "Naam",
+          "device_name": "Naam",
           "model": "Model"
         }
       }
     },
     "error": {
-      "no_devices_found": "Geen Melitta apparaten gevonden. Zorg dat je koffiezetapparaat aan staat en Bluetooth actief is.",
+      "no_devices_found": "Geen Bluetooth-apparaten gevonden. Zorg dat je koffiezetapparaat aan staat en de Melitta Connect app gesloten is.",
       "invalid_mac": "Ongeldig MAC-adres. Gebruik het formaat AA:BB:CC:DD:EE:FF."
     },
     "abort": {
@@ -51,7 +51,10 @@
       "bean_level": { "name": "Bonenvoorraad" },
       "error": { "name": "Foutmelding" },
       "beverage": { "name": "Huidig drankje" },
-      "total_brews": { "name": "Totaal gezet" }
+      "total_brews": { "name": "Totaal gezet" },
+      "last_connect": { "name": "Laatste verbinding" },
+      "last_error": { "name": "Laatste fout" },
+      "ble_discovery": { "name": "BLE Diagnostiek" }
     },
     "binary_sensor": {
       "connected": { "name": "Verbonden" },
