--- a/custom_components/melitta_coffee/translations/en.json
+++ b/custom_components/melitta_coffee/translations/en.json
@@ -62,17 +62,24 @@
     },
     "button": {
       "brew_espresso": { "name": "Brew Espresso" },
-      "brew_coffee": { "name": "Brew Coffee" },
-      "brew_cappuccino": { "name": "Brew Cappuccino" },
-      "brew_latte_macchiato": { "name": "Brew Latte Macchiato" },
+      "brew_ristretto": { "name": "Brew Ristretto" },
       "brew_lungo": { "name": "Brew Lungo" },
+      "brew_espresso_doppio": { "name": "Brew Double Espresso" },
+      "brew_cafe_creme": { "name": "Brew Caf\u00e9 Cr\u00e8me" },
+      "brew_cappuccino": { "name": "Brew Cappuccino" },
+      "brew_caffe_latte": { "name": "Brew Caff\u00e8 Latte" },
+      "brew_latte_macchiato": { "name": "Brew Latte Macchiato" },
+      "brew_flat_white": { "name": "Brew Flat White" },
+      "brew_americano": { "name": "Brew Americano" },
+      "brew_espresso_macchiato": { "name": "Brew Espresso Macchiato" },
+      "brew_cafe_au_lait": { "name": "Brew Caf\u00e9 au Lait" },
+      "brew_milk": { "name": "Warm Milk" },
+      "brew_milk_froth": { "name": "Milk Froth" },
       "brew_hot_water": { "name": "Hot Water" },
-      "brew_steam": { "name": "Steam" },
       "stop": { "name": "Stop" },
       "clean": { "name": "Clean" },
       "rinse": { "name": "Rinse" },
-      "standby": { "name": "Standby" },
-      "wake_up": { "name": "Wake Up" }
+      "standby": { "name": "Standby" }
     },
     "select": {
       "strength": { "name": "Coffee Strength" },
