--- a/custom_components/melitta_coffee/translations/nl.json
+++ b/custom_components/melitta_coffee/translations/nl.json
@@ -62,17 +62,24 @@
     },
     "button": {
       "brew_espresso": { "name": "Zet Espresso" },
-      "brew_coffee": { "name": "Zet Koffie" },
-      "brew_cappuccino": { "name": "Zet Cappuccino" },
-      "brew_latte_macchiato": { "name": "Zet Latte Macchiato" },
+      "brew_ristretto": { "name": "Zet Ristretto" },
       "brew_lungo": { "name": "Zet Lungo" },
+      "brew_espresso_doppio": { "name": "Zet Dubbele Espresso" },
+      "brew_cafe_creme": { "name": "Zet Caf\u00e9 Cr\u00e8me" },
+      "brew_cappuccino": { "name": "Zet Cappuccino" },
+      "brew_caffe_latte": { "name": "Zet Caff\u00e8 Latte" },
+      "brew_latte_macchiato": { "name": "Zet Latte Macchiato" },
+      "brew_flat_white": { "name": "Zet Flat White" },
+      "brew_americano": { "name": "Zet Americano" },
+      "brew_espresso_macchiato": { "name": "Zet Espresso Macchiato" },
+      "brew_cafe_au_lait": { "name": "Zet Caf\u00e9 au Lait" },
+      "brew_milk": { "name": "Warme Melk" },
+      "brew_milk_froth": { "name": "Melkschuim" },
       "brew_hot_water": { "name": "Heet Water" },
-      "brew_steam": { "name": "Stoom" },
       "stop": { "name": "Stop" },
       "clean": { "name": "Reinigen" },
       "rinse": { "name": "Spoelen" },
-      "standby": { "name": "Standby" },
-      "wake_up": { "name": "Inschakelen" }
+      "standby": { "name": "Standby" }
     },
     "select": {
       "strength": { "name": "Koffiesterkte" },
