--- a/custom_components/melitta_coffee/translations/en.json
+++ b/custom_components/melitta_coffee/translations/en.json
@@ -3,87 +3,19 @@
     "step": {
       "user": {
         "title": "Melitta Coffee Machine",
-        "description": "Choose how to add your Melitta coffee machine.",
-        "menu_options": {
-          "scan": "Automatically scan for devices",
-          "manual": "Enter MAC address manually"
-        }
-      },
-      "scan": {
-        "title": "Bluetooth devices found",
-        "description": "Select your Melitta coffee machine from the list. Devices marked with * are likely Melitta devices.\n\nIMPORTANT: After adding the device, press the 'Verbinden' (Connect) button on your coffee machine's display to enable Bluetooth pairing. The integration will automatically retry authentication until the machine accepts the connection.",
+        "description": "Enter the MAC address of your Melitta coffee machine or select a discovered device. Make sure Bluetooth is enabled and the machine is on.",
         "data": {
-          "mac_address": "Discovered device",
-          "device_name": "Device name",
-          "model": "Model"
-        }
-      },
-      "manual": {
-        "title": "Manual setup",
-        "description": "Enter the Bluetooth MAC address of your Melitta coffee machine. You can find this in the Melitta Connect app under device settings.\n\nIMPORTANT: After adding the device, press the 'Verbinden' (Connect) button on your coffee machine's display to enable Bluetooth pairing.",
-        "data": {
-          "mac_address": "MAC address (e.g. AA:BB:CC:DD:EE:FF)",
-          "device_name": "Device name",
-          "model": "Model"
+          "mac_address": "MAC Address"
         }
       },
       "bluetooth_confirm": {
-        "title": "Melitta found",
-        "description": "Melitta device found: {name} ({address}). Would you like to add this device?\n\nIMPORTANT: After confirming, press the 'Verbinden' (Connect) button on your coffee machine's display to complete the Bluetooth pairing.",
-        "data": {
-          "device_name": "Name",
-          "model": "Model"
-        }
+        "title": "Confirm Melitta Coffee Machine",
+        "description": "Found {name}. Press 'Verbinden' on the machine display, then confirm to set up."
       }
     },
-    "error": {
-      "no_devices_found": "No Bluetooth devices found. Make sure your coffee machine is on and the Melitta Connect app is closed.",
-      "invalid_mac": "Invalid MAC address. Use the format AA:BB:CC:DD:EE:FF."
-    },
     "abort": {
-      "already_configured": "This device is already configured."
-    }
-  },
-  "entity": {
-    "sensor": {
-      "status": { "name": "Status" },
-      "water_level": { "name": "Water Level" },
-      "bean_level": { "name": "Bean Level" },
-      "error": { "name": "Error" },
-      "beverage": { "name": "Current Beverage" },
-      "total_brews": { "name": "Total Brews" },
-      "last_connect": { "name": "Last Connection" },
-      "last_error": { "name": "Last Error" },
-      "ble_discovery": { "name": "BLE Diagnostics" }
-    },
-    "binary_sensor": {
-      "connected": { "name": "Connected" },
-      "brewing": { "name": "Brewing" }
-    },
-    "button": {
-      "brew_espresso": { "name": "Brew Espresso" },
-      "brew_ristretto": { "name": "Brew Ristretto" },
-      "brew_lungo": { "name": "Brew Lungo" },
-      "brew_espresso_doppio": { "name": "Brew Double Espresso" },
-      "brew_cafe_creme": { "name": "Brew Caf\u00e9 Cr\u00e8me" },
-      "brew_cappuccino": { "name": "Brew Cappuccino" },
-      "brew_caffe_latte": { "name": "Brew Caff\u00e8 Latte" },
-      "brew_latte_macchiato": { "name": "Brew Latte Macchiato" },
-      "brew_flat_white": { "name": "Brew Flat White" },
-      "brew_americano": { "name": "Brew Americano" },
-      "brew_espresso_macchiato": { "name": "Brew Espresso Macchiato" },
-      "brew_cafe_au_lait": { "name": "Brew Caf\u00e9 au Lait" },
-      "brew_milk": { "name": "Warm Milk" },
-      "brew_milk_froth": { "name": "Milk Froth" },
-      "brew_hot_water": { "name": "Hot Water" },
-      "stop": { "name": "Stop" },
-      "clean": { "name": "Clean" },
-      "rinse": { "name": "Rinse" },
-      "standby": { "name": "Standby" }
-    },
-    "select": {
-      "strength": { "name": "Coffee Strength" },
-      "cups": { "name": "Number of Cups" }
+      "already_configured": "This device is already configured.",
+      "not_supported": "This device is not a supported Melitta coffee machine."
     }
   }
 }
